--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Gabarito:wght@400;500;600;700;800;900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-h1,h2,h3,h4,h5,h6{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: bold;
 }
-:root{
-  --swiper-theme-color: #be1111cb!important;
+:root {
+  --swiper-theme-color: #be1111cb !important;
+  font-family: "Gabarito", sans-serif;
 }
