Brand button onclick page created + onclick only single brand data loaded successfully + no data on brand handled + brand wise data card created + ADD product page, form created and functionality added + Mycart page added

--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,8 @@ h6 {
   --swiper-theme-color: #be1111cb !important;
   font-family: "Gabarito", sans-serif;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
